# AudioVisual-toolbox

./: .gitignore  CMakeLists.txt  README.md
include/: Audio2Image.h  AudioVisualFilters.h  Image2Audio.h  common.h
src/: Audio2Image.cpp  main.cpp
test/: library_test.cpp  testing.cpp  testing.h
